zwave-js-ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zwave-js-ui
  namespace: zwave-js-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zwave-js-ui
  template:
    metadata:
      labels:
        app: zwave-js-ui
    spec:
      containers:
      - name: zwave-js-ui
        image: zwavejs/zwave-js-ui:latest
        ports:
          - containerPort: 8091
            name: http
            protocol: TCP
          - containerPort: 3000
            name: websocket
            protocol: TCP
        volumeMounts:
          - name: zwave-js-ui-data
            mountPath: /usr/src/app/store
          - name: usb
            mountPath: /dev/zwave
        securityContext:
          privileged: true
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
      nodeSelector:
        zwave-usb: "true"
      restartPolicy: Always
      volumes:
        - name: zwave-js-ui-data
          persistentVolumeClaim:
            claimName: zwave-js-ui-data
        - name: usb
          hostPath:
          # Do not use /dev/ttyUSBX serial devices, as those mappings can change over time.
          # Instead, use the /dev/serial/by-id/X serial device for your Z-Wave stick.
          path: /dev/serial/by-id/usb-Zooz_800_Z-Wave_Stick_533D004242-if00
          type: CharDevice
