zwave-js-ui/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zwave-js-ui
spec:
  selector:
    app: zwave-js-ui
  ports:
    - name: http
      port: 8091
      targetPort: 8091
    - name: websocket
      port: 3000
      targetPort: 3000
