zwave-js-ui/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zwave-js-ui
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`zwave.home.coleduclos.io`)
      services:
        - name: zwave-js-ui
          port: 8091
  tls:
    secretName: zwave-js-ui-ingressroute-certificate-secret
